--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "0.1.0",
+    "@expo/vector-icons": "12.0.3",
     "expo": "~40.0.0",
+    "expo-app-loading": "1.0.1",
+    "expo-font": "~8.4.0",
+    "expo-screen-orientation": "~2.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -20,7 +25,30 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "@typescript-eslint/parser": "4.14.2",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.19.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "eslint-plugin-react-native": "3.10.0",
+    "husky": ">=4",
+    "lint-staged": ">=10",
+    "prettier": "2.2.1",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint"
+  }
 }
