--- a/package.json
+++ b/package.json
@@ -9,54 +9,29 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "0.1.0",
-    "@expo/vector-icons": "12.0.3",
-    "@react-native-community/masked-view": "0.1.10",
+    "@expo/vector-icons": "^12.0.0",
     "@react-navigation/native": "5.9.2",
     "@react-navigation/stack": "5.14.2",
-    "expo": "~40.0.0",
-    "expo-app-loading": "1.0.1",
-    "expo-font": "~8.4.0",
-    "expo-screen-orientation": "~2.1.0",
-    "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12",
-    "expo-sensors": "~9.2.0"
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
+    "expo-screen-orientation": "~4.1.1",
+    "expo-status-bar": "~1.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1",
+    "expo-sensors": "~11.1.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "@typescript-eslint/eslint-plugin": "4.14.2",
-    "@typescript-eslint/parser": "4.14.2",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.19.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "1.7.0",
-    "eslint-plugin-react-native": "3.10.0",
-    "husky": ">=4",
-    "lint-staged": ">=10",
-    "prettier": "2.2.1",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
   },
-  "private": true,
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": "eslint"
-  }
+  "private": true
 }
