--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": false
+      "supportsTablet": false,
+      "bundleIdentifier": "com.mutesi-cc.ios"
     },
     "android": {
       "adaptiveIcon": {
